--- a/examples/Logistic Regression.ipynb
+++ b/examples/Logistic Regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Binary Classification with ScratchML Logistic Regression"
+    "# Binary Classification with ScratchDL Logistic Regression"
    ]
   },
   {
@@ -104,14 +104,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30/30 [00:00<00:00, 189.79it/s]\n"
+      "100%|██████████| 30/30 [00:00<00:00, 204.43it/s]\n"
      ]
     }
    ],
    "source": [
-    "from ScratchML.models import LogisticRegression\n",
+    "from ScratchDL.models import LogisticRegression\n",
     "\n",
-    "clf = LogisticRegression(learning_rate=0.05, n_iteration=30)\n",
+    "clf = LogisticRegression(learning_rate=0.05, n_iterations=30)\n",
     "clf.fit(X_train_std, y_train)"
    ]
   },
@@ -132,7 +132,7 @@
     }
    ],
    "source": [
-    "from ScratchML.plot import plot_loss\n",
+    "from ScratchDL.plot import plot_loss\n",
     "plot_loss(clf.loss)"
    ]
   },
@@ -179,7 +179,7 @@
     }
    ],
    "source": [
-    "from ScratchML.plot import plot_decision_regions\n",
+    "from ScratchDL.plot import plot_decision_regions\n",
     "X_combined_std = np.vstack((X_train_std, X_test_std))\n",
     "y_combined = np.hstack((y_train, y_test))\n",
     "\n",
