--- a/examples/Perceptron.ipynb
+++ b/examples/Perceptron.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Binary Classification with ScratchML Perceptron"
+    "# Binary Classification with ScratchDL Perceptron"
    ]
   },
   {
@@ -104,17 +104,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 150/150 [00:00<00:00, 903.16it/s]\n"
+      "100%|██████████| 150/150 [00:00<00:00, 960.68it/s]\n"
      ]
     }
    ],
    "source": [
-    "from ScratchML.models import Perceptron\n",
+    "from ScratchDL.models import Perceptron\n",
     "\n",
     "# It's important which learning_rate rate and epoch (n_iterations) we choose with a perceptron.\n",
     "# Too high learning rate and it will overshoot\n",
     "# Too high epoch will result in overfitting\n",
-    "clf = Perceptron(learning_rate=0.0001, n_iteration=150)\n",
+    "clf = Perceptron(learning_rate=0.0001, n_iterations=150)\n",
     "clf.fit(X_train_std, y_train)"
    ]
   },
@@ -135,7 +135,7 @@
     }
    ],
    "source": [
-    "from ScratchML.plot import plot_loss\n",
+    "from ScratchDL.plot import plot_loss\n",
     "plot_loss(clf.loss)"
    ]
   },
@@ -182,7 +182,7 @@
     }
    ],
    "source": [
-    "from ScratchML.plot import plot_decision_regions\n",
+    "from ScratchDL.plot import plot_decision_regions\n",
     "X_combined_std = np.vstack((X_train_std, X_test_std))\n",
     "y_combined = np.hstack((y_train, y_test))\n",
     "\n",
@@ -215,18 +215,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/mikePro/miniconda3/lib/python3.5/site-packages/sklearn/linear_model/stochastic_gradient.py:128: FutureWarning: max_iter and tol parameters have been added in <class 'sklearn.linear_model.perceptron.Perceptron'> in 0.19. If both are left unset, they default to max_iter=5 and tol=None. If tol is not None, max_iter defaults to max_iter=1000. From 0.21, default max_iter will be 1000, and default tol will be 1e-3.\n",
-      "  \"and default tol will be 1e-3.\" % type(self), FutureWarning)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "Perceptron(alpha=0.0001, class_weight=None, eta0=1.0, fit_intercept=True,\n",
-       "      max_iter=None, n_iter=None, n_jobs=1, penalty=None, random_state=0,\n",
+       "      max_iter=1000, n_iter=None, n_jobs=1, penalty=None, random_state=0,\n",
        "      shuffle=True, tol=None, verbose=0, warm_start=False)"
       ]
      },
@@ -238,7 +230,7 @@
    "source": [
     "from sklearn.linear_model import Perceptron\n",
     "\n",
-    "clf = Perceptron()\n",
+    "clf = Perceptron(max_iter=1000)\n",
     "clf.fit(X_train_std, y_train)"
    ]
   },
