update model docs

--- a/examples/Logistic Regression.ipynb
+++ b/examples/Logistic Regression.ipynb
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ScratchML Logistic Regression"
+    "# ScratchDL Logistic Regression"
    ]
   },
   {
@@ -111,7 +111,7 @@
    "source": [
     "from ScratchDL.models import LogisticRegression\n",
     "\n",
-    "clf = LogisticRegression(learning_rate=0.05, n_iterations=30)\n",
+    "clf = LogisticRegression(learning_rate=0.05, epochs=30)\n",
     "clf.fit(X_train_std, y_train)"
    ]
   },
