--- a/examples/Perceptron.ipynb
+++ b/examples/Perceptron.ipynb
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ScratchML Perceptron"
+    "# ScratchDL Perceptron"
    ]
   },
   {
@@ -111,10 +111,10 @@
    "source": [
     "from ScratchDL.models import Perceptron\n",
     "\n",
-    "# It's important which learning_rate rate and epoch (n_iterations) we choose with a perceptron.\n",
+    "# It's important which learning_rate rate and epoch we choose with a perceptron.\n",
     "# Too high learning rate and it will overshoot\n",
     "# Too high epoch will result in overfitting\n",
-    "clf = Perceptron(learning_rate=0.0001, n_iterations=150)\n",
+    "clf = Perceptron(learning_rate=0.0001, epochs=150)\n",
     "clf.fit(X_train_std, y_train)"
    ]
   },
